<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_registration_form"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/primary_text_color"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:hint="@string/enter_name_here"
        android:inputType="text"
        android:background="@drawable/edit_text_background"
        android:textColor="@color/primary_text_color"
        android:textColorHint="@color/hint_text_color" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:autofillHints=""
        android:hint="@string/enter_e_mail_here"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_background"
        android:textColor="@color/primary_text_color"
        android:textColorHint="@color/hint_text_color" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginEnd="@dimen/_10dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_margin="8dp"
            android:background="@drawable/button_background"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:layout_margin="8dp"
            android:background="@drawable/button_background"
            android:textColor="@color/white"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvStudent"
        android:layout_weight="1"
        android:elevation="@dimen/_10dp"
        android:layout_marginBottom="@dimen/_10dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginEnd="@dimen/_10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

</LinearLayout>
